--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
-builds/
-classes/
-*.iml
-*.xml
-.project
+# eclipse
+bin
+*.launch
+.settings
+.metadata
 .classpath
+.project
+
+# idea
+out
+*.ipr
+*.iws
+*.iml
+.idea
+
+# gradle
+build
+.gradle
