Detect both UTF-8 and ISO-8859-1

--- a/build.gradle
+++ b/build.gradle
@@ -12,3 +12,7 @@ repositories {
 application {
     mainClass = 'main.MainWindow'
 }
+
+dependencies {
+    implementation 'com.github.albfernandez:juniversalchardet:2.4.0'
+}
